--- a/MinhaDemoMvc/MinhaDemoMvc.csproj
+++ b/MinhaDemoMvc/MinhaDemoMvc.csproj
@@ -8,10 +8,10 @@
     <Folder Include="ViewComponents\" />
     <Folder Include="Views\Shared\Components\" />
     <Folder Include="Views\Shared\Components\Carrinho\" />
-    <Folder Include="Views\Filmes\" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.3" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration" Version="3.1.4" />
+    <PackageReference Include="EntityFramework" Version="6.4.4" />
   </ItemGroup>
 </Project>
